MOG Experiments Branch - see coms402_deliverables for complete change list